style: fix add new button alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -62,6 +62,17 @@ body {
     background-color: rgb(28, 28, 28);
 }
 
+header {
+    width: 1000px;
+    grid-row: 1 / 2;
+    grid-column: 1 / 4;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 150px;
+    justify-items: center;
+    align-items: center;
+}
+
 h1 {
     color: white;
     text-align: center;
